[#140641593] Fix OOS text alignment

--- a/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
+++ b/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
@@ -34,7 +34,7 @@
     top: 28%;
     width: 90%;
     height: $product-card-actions-height;
-    padding-top: 8px;
+    padding-top: 9px;
     background-color: rgba(255, 255, 255, 0.75);
     text-transform: uppercase;
     text-align: center;
